@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.skyvideoitalia" name="Sky Video Italia" version="0.0.7" provider-name="nixxo">
+<addon id="plugin.video.skyvideoitalia" name="Sky Video Italia" version="1.0.0" provider-name="nixxo">
     <requires>
         <import addon="xbmc.python" version="3.0.0" />
         <import addon="script.module.simplecache" version="1.0.0"/>
@@ -17,10 +17,9 @@
         <license>GPL-3.0-or-later</license>
         <website>https://www.github.com/nixxo</website>
         <source>https://www.github.com/nixxo/plugin.video.skyvideoitalia</source>
-        <news>0.0.7
-- removed phate89 library and use a custom one
-- logging and notification cleanup
-- better addon description</news>
+        <news>1.0.0
+- first public release
+- code cleanup, unix eol</news>
         <assets>
             <icon>resources/icon.png</icon>
             <fanart>resources/fanart.png</fanart>
