@@ -1,11 +1,13 @@
 # -*- coding: utf-8 -*-
 import os
 import sys
-from urllib.parse import urlencode, parse_qsl
+from urllib.parse import parse_qsl
+from urllib.parse import urlencode
+
 import xbmc
 import xbmcaddon
-import xbmcplugin
 import xbmcgui
+import xbmcplugin
 import xbmcvfs
 
 ADDON = xbmcaddon.Addon()
